# Brute-force-Nearest-Neighbor

./: README.md  run.sh
src/: CMakeLists.txt  core.cu  core.h  main.cu
